assets/styles/index.scss
@import '~bootstrap/scss/bootstrap';

.game-space {
    padding: 0;
    color: white;
    background-color: #373737;
    font-size: 22vw;
    overflow: hidden;

    &:hover {
        background-color: rgb(172, 172, 172);
        cursor: pointer;
    }
}

.dummy-game {
    height: 135px;
    padding: 0;
    color: white;
    background-color: #373737;
    font-size: 1000%;

    &:hover {
    background-color: #373737;
    cursor: default;
    }
}

.carousel-inner {
    height: 500px;
}

.delete-game-btn {
    margin-top: 20px;
}

.game-space-display {
    display: flex;
    padding: 0 0 12% 0;
    margin: 0;
    line-height: 0;
    justify-content: center;
    align-items: center;
}

#new-game, #display h3 {
    font-size: 2.5vw;
}

